--- a/index.html
+++ b/index.html
@@ -8,10 +8,49 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico">
 </head>
+<body class="body">
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#contacs" class="nav-link">Contacs</a></li>
+                    <li class="nav-item"><a href="#about_me" class="nav-link">About me</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+                </ul>
+            </nav>
 
-<p>test</p>
+        </div>
+
+    </header>
+    <main class="main">
+        <div class="container">
+            <section class="section" id="contacs">
+                <h2>Contacs</h2>
+            </section>
+            <section class="section" id="about_me">
+                <h2>About me</h2>
+            </section>
+            <section class="section" id="skills">
+                <h2>Skills</h2>
+            </section>
+            <section class="section" id="education">
+                <h2>Education</h2>
+            </section>
+            <section class="section" id="languages">
+                <h2>Languages</h2>
+            </section>
+            
+        </div>
+
+    </main>
+    <footer class="footer">
+        <div class="container">
+
+        </div>
+
+    </footer>
 </body>
-<footer>
-
-</footer>
 </html>
