fix: fix source

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;400;700;800&display=swap");
     </style>
-    <link rel="stylesheet" href="/sass/style.css" />
+    <link rel="stylesheet" href="sass/style.css" />
     <link rel="icon" href="assets/favicon.ico" />
     <title>Shyrvel CV</title>
   </head>
@@ -48,7 +48,7 @@
             <h1 class="me__title">Shyrvel Andrei</h1>
             <img
               class="photo"
-              src="/assets/img/myfoto.jpg"
+              src="assets/img/myfoto.jpgfe"
               alt="my foto was here"
             />
           </section>
