refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="me__title">Shyrvel Andrei</h1>
             <img
               class="photo"
-              src="assets/img/myfoto.jpgfe"
+              src="assets/img/myfoto.jpg"
               alt="my foto was here"
             />
           </section>
@@ -91,7 +91,6 @@
               <a
                 class="text"
                 href="https://szyrwel.github.io/rsschool-cv/"
-                class="projects-link"
                 >CV</a
               >
             </p>
@@ -125,7 +124,6 @@
           <a
             class="footer__title"
             href="https://github.com/Szyrwel"
-            class="footer-link"
             >Szyrwel</a
           >
 
