--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;400;700;800&display=swap");
     </style>
-    <link rel="stylesheet" href="sass/style.css" />
-    <link rel="icon" href="assets/favicon.ico" />
+    <link rel="stylesheet" href="sass/style.css">
+    <link rel="icon" href="assets/favicon.ico">
     <title>Shyrvel CV</title>
   </head>
   <body>
@@ -50,7 +50,7 @@
               class="photo"
               src="assets/img/myfoto.jpg"
               alt="my foto was here"
-            />
+            >
           </section>
           <section class="section" id="contacts">
             <h2 class="title">Contacts</h2>
@@ -132,7 +132,7 @@
               class="rsslogo"
               src="./assets/img/rs_school_logo.svg"
               alt="logo rsschool"
-          /></a>
+          ></a>
         </div>
       </div>
     </footer>
